# FlightTravelRecord

./: Cargo.toml  README.md
src/: main.rs  version.rs
src/data_structures/: aircraft.rs  airport.rs  mod.rs
src/domain/: aircraft.rs  airline.rs  airport.rs  flight.rs  mod.rs  ticket.rs  time_point.rs
