[package]
name = "FlightTravelRecord"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"]}
chrono-tz = "0.10.4"
rusqlite = "0.37.0"
time = "0.3.44"
windows = { version = "0.62.1", default-features = false, features = ["Win32_Foundation", "Win32_System_Com"] }
